fix(mobile): optimise layout for mobile and tablet view, change logo to svg format

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -15,30 +15,31 @@
 	src: url(/assets/typefaces/UniversLTStd-Cn.otf);
 }
 
-html { font-size: 100%; -webkit-text-size-adjust: 100%; -webkit-font-smoothing:antialiased; font-smoothing:antialiased; text-rendering:optimizeLegibility }
+html { font-size: 100%; -webkit-text-size-adjust: 100%; -webkit-font-smoothing:antialiased; font-smoothing:antialiased; text-rendering:optimizeLegibility; }
 
-html { overflow-y: scroll }
-html,body { margin: 0; height: 100% }
-body { font: 14px/1.8em 'Tisa OT'; color: #505050 }
+html { overflow-y: scroll; }
+html,body { margin: 0; height: 100%; }
+body { font: 14px/1.8em 'Tisa OT'; color: #505050; }
 
-a, h1,h2,h3,h4,h5,h6 { color: #CE0C26; text-decoration: none }
-.heading-typeface,h1,h2,h3,h4,h5,h6 { font-family: 'Univers LT Std - 47 Light Condensed'; font-weight: lighter; text-transform: uppercase }
-h1,h2,h3,h4,h5,h6,p { margin-top: 0 }
-hr { border-bottom: 1px solid #EEE; border-width: 0 0 1px; margin: 3em 0 }
+a, h1,h2,h3,h4,h5,h6 { color: #CE0C26; text-decoration: none; }
+.heading-typeface,h1,h2,h3,h4,h5,h6 { font-family: 'Univers LT Std - 47 Light Condensed'; font-weight: lighter; text-transform: uppercase; }
+h1,h2,h3,h4,h5,h6,p { margin-top: 0; }
+hr { border-bottom: 1px solid #EEE; border-width: 0 0 1px; margin: 3em 0; }
 
 .column { float: left; display: inline; }
 .fill { max-width: 120%; margin-left: -10%;}
-#wrapper { height: 100% }
+#wrapper { height: 100%; }
 
-aside, section { height: 100% }
 
-aside { width: 50%; position: fixed; top: 0; bottom: 0; background-color: rgba(221,30,62,1); color: #FFF }
+aside { width: 50%; position: fixed; top: 0; bottom: 0; background-color: rgba(221,30,62,1); color: #FFF; }
 	aside .padded { padding: 2em 10% ; width: 80%; max-width: 480px;}
-	aside .intro { font-style: italic }
+	aside .intro { font-style: italic; }
 	#logo { margin-left: -18px ; margin-top: 1em;}
-section { width: 50%; margin-left: 50% }
+		#logo img{ width: 100%;}
+
+section { width: 50%; margin-left: 50%; }
 	section .padded { margin: 0 10%; }
-	section figure { display: block; margin: 0; background-repeat: no-repeat; background-size: 100% auto; overflow: hidden }
+	section figure { display: block; margin: 0; background-repeat: no-repeat; background-size: 100% auto; overflow: hidden; }
 
 	section#mainContent figure img {
 	  -webkit-transition: all 0.25s ease-in-out;
@@ -64,9 +65,9 @@ section { width: 50%; margin-left: 50% }
   }
 
   .contentArea { padding-bottom: 30px; padding-top: 45px; }
-	.slides li { background-color: #FFF }
+	.slides li { background-color: #FFF; }
 	.projectDetails { width: 65%; margin-right: 5%; }
-	.projectMeta { width: 30%; text-align: right; font-size: 0.8em; font-style: italic; padding: 0; margin-top: 0; list-style: none inside }
+	.projectMeta { width: 30%; text-align: right; font-size: 0.8em; font-style: italic; padding: 0; margin-top: 0; list-style: none inside; }
 
   .clearfix:before,
   .clearfix:after {
@@ -82,7 +83,7 @@ section { width: 50%; margin-left: 50% }
     zoom: 1; }
 
 /* ----------------------------- */
-aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 0; margin-top: 0.5em; margin-bottom: 0.5em }
+aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 0; margin-top: 0.5em; margin-bottom: 0.5em; }
 .columns { clear: both; }
 .columns ul { width: 50%; float: left; }
 
@@ -112,24 +113,27 @@ aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 
 
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-aside { width: 40% }
-section { width: 60%; margin-left: 40% }
+aside { width: 40%; }
+section { width: 60%; margin-left: 40%; }
 }
 
 
 /* All Mobile Sizes (devices and browser) */
-@media only screen and (max-width: 767px) { 
+/*@media only screen and (max-width: 767px) { 
 aside { width: 30% }
 section { width: 70%; margin-left: 30% }
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-.column { position: relative; float: none; display: block }
+@media only screen and (max-width: 767px) {
+.column { position: relative; float: none; display: block; }
 aside { width: auto; }
-section { width: auto; margin-left: 0 }
+section { width: auto; margin-left: 0; }
+.projectDetails { width: 100%; }
+.projectMeta { width: 100%; }
 }
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px) {
+@media only screen and (max-width: 460px) {
+.columns ul { width: 100%; float: none; }
 }
