--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,17 +1,17 @@
 @font-face {
-	font-family: 'Tisa OT';
-	src: url(../typefaces/TisaOT.otf);
+  font-family: 'Tisa OT';
+  src: url(../typefaces/TisaOT.otf);
 }
 
 @font-face {
-	font-family: 'Univers LT Std - 47 Light Condensed';
-	src: url(/assets/typefaces/UniversLTStd-Cn.otf);
+  font-family: 'Univers LT Std - 47 Light Condensed';
+  src: url(/assets/typefaces/UniversLTStd-Cn.otf);
 }
 
 /*
 @font-face {
-	font-family: 'Univers LT Std';
-	src: url(../typefaces/UniversLTStd-Cn.otf);
+  font-family: 'Univers LT Std';
+  src: url(../typefaces/UniversLTStd-Cn.otf);
 }
 */
 
@@ -32,58 +32,83 @@ hr { border-bottom: 1px solid #EEE; border-width: 0 0 1px; margin: 3em 0; }
 
 
 aside { width: 30%; position: fixed; top: 0; bottom: 0; background-color: rgba(221,30,62,1); color: #FFF; }
-	aside .padded { padding: 2em 10% ; width: 80%; max-width: 480px;}
-	aside .intro { font-style: italic; }
-	aside .portfolio { background-color:#fff; list-style-type: none; padding: 0;}
-		.portfolio li:first-child{ color:#5A020E; padding-left: 0.6em; }
-		.portfolio li { padding-left: 1.5em;}
-	#logo { margin-left: -18px ; margin-top: 1em; }
-		#logo img{ width: 60%;}
-		.contact-footer .columns ul { width: 100%; }
+  aside .padded { padding: 2em 10% ; width: 80%; max-width: 480px;}
+  aside .intro { font-style: italic; }
+  aside .portfolio { background-color:#FFF; list-style-type: none; padding: 0;}
+    .portfolio li:first-child{ color:#5A020E; padding-left: 0.6em; }
+    .portfolio li { padding-left: 1.5em;}
+  #logo { margin-left: -18px ; margin-top: 1em; }
+    #logo img{ width: 60%;}
+    .contact-footer .columns ul { width: 100%; }
 
 section { width: 70%; margin-left: 30%; }
-	section .padded { margin: 0 10%; }
-	section figure { display: block; margin: 0; background-repeat: no-repeat; background-size: 100% auto; overflow: hidden; }
+  section .padded { margin: 0 10%; }
+  section figure { display: block; margin: 0; background-repeat: no-repeat; background-size: 100% auto; overflow: hidden; }
 
-	section#mainContent figure img {
-		-webkit-transition: all 0.25s ease-in-out;
-		-moz-transition: all 0.25s ease-in-out;
-		-ms-transition: all 0.25s ease-in-out;
-		-o-transition: all 0.25s ease-in-out;
-		transition: all 0.25s ease-in-out;
-		-webkit-transform: translate(0, 80%);
-		-moz-transform: translate(0, 80%);
-		-ms-transform: translate(0, 80%);
-		-o-transform: translate(0, 80%);
-		transform: translate(0, 80%);
-		width: 120%;
-		opacity: 0;
-  	}
-	section#mainContent figure.active img {
-		-webkit-transform: translate(0, 0);
-		-moz-transform: translate(0, 0);
-		-ms-transform: translate(0, 0);
-		-o-transform: translate(0, 0);
-		transform: translate(0, 0);
-		opacity: 1;
-		}
+  section#mainContent h4,
+  section#mainContent h5,
+  section#mainContent h6 { color: #505050; }
 
-	.contentArea { padding-bottom: 30px; padding-top: 45px; }
-	.slides li { background-color: #FFF; }
-	.projectDetails { width: 65%; margin-right: 5%; }
-	.projectMeta { width: 30%; text-align: right; font-size: 0.8em; font-style: italic; padding: 0; margin-top: 0; list-style: none inside; }
+  section#mainContent figure img {
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    -ms-transition: all 0.25s ease-in-out;
+    -o-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
+    -webkit-transform: translate(0, 80%);
+    -moz-transform: translate(0, 80%);
+    -ms-transform: translate(0, 80%);
+    -o-transform: translate(0, 80%);
+    transform: translate(0, 80%);
+    width: 120%;
+    opacity: 0;
+  }
 
-	.clearfix:before,
-	.clearfix:after {
-		content: '\0020';
-		display: block;
-		overflow: hidden;
-		visibility: hidden;
-		width: 0;
-		height: 0; 
-	}
-	.clearfix:after { clear: both; }
-	.clearfix { zoom: 1; }
+  section#mainContent figure.active img {
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+
+  .projectDetails ol { list-style-position: outside; padding-left: 1.2em; }
+
+  .projectDetails ul {
+    font-family: 'Tisa OT';
+    color:#7f7f7f;
+    padding-left: 0;
+    list-style-type: none;
+    list-style-position: inside;
+  }
+
+  .projectDetails ul li { padding-left: 0; }
+
+  .projectDetails ul li:before {
+    content: '\203A';
+    color: #DD1E3E;
+    display: inline-block;
+    width: 1.2em;
+    font-style: normal;
+  }
+
+  .contentArea { padding-bottom: 30px; padding-top: 45px; }
+  .slides li { background-color: #FFF; }
+  .projectDetails { width: 65%; margin-right: 5%; }
+  .projectMeta { width: 30%; text-align: right; font-size: 0.8em; font-style: italic; padding: 0; margin-top: 0; list-style: none inside; }
+
+  .clearfix:before,
+  .clearfix:after {
+    content: '\0020';
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    width: 0;
+    height: 0; 
+  }
+  .clearfix:after { clear: both; }
+  .clearfix { zoom: 1; }
 
 /* ----------------------------- */
 aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 0; margin-top: 0.5em; margin-bottom: 0.5em; }
@@ -93,14 +118,14 @@ aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 
 .typeface-colour-secondary, .typeface-colour-secondary a { color: #5A020E; }
 .typeface-colour-white, .typeface-colour-white a { color: #FFF; }
 .contact-footer {
-	position: absolute; 
-	font-size: 0.8em; 
-	line-height: 1.5em; 
-	bottom: 0; 
-	left: 10%;
-	right: 10%;
-	margin-bottom: 40px;
-	max-width: 480px;
+  position: absolute; 
+  font-size: 0.8em; 
+  line-height: 1.5em; 
+  bottom: 0; 
+  left: 10%;
+  right: 10%;
+  margin-bottom: 40px;
+  max-width: 480px;
 }
 
 .rs { margin-top: 0; margin-bottom: 0; padding-top: 0; padding-bottom: 0; }
@@ -125,9 +150,9 @@ aside hr { border: none; border-bottom: 1px solid rgba(90, 2, 14, 0.1); height: 
 
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-	aside { width: 40%; }
-	section { width: 60%; margin-left: 40%; }
-	.columns ul { width: 100%; float: none; }
+  aside { width: 40%; }
+  section { width: 60%; margin-left: 40%; }
+  .columns ul { width: 100%; float: none; }
 }
 
 
@@ -139,20 +164,20 @@ section { width: 70%; margin-left: 30% }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (max-width: 767px) {
-	.column { position: relative; float: none; display: block; }
-	aside { width: auto; }
-	section { width: auto; margin-left: 0; }
-	.projectDetails { width: 100%; }
-	.projectMeta { width: 100%; }
-	.contact-footer{
-		position: relative;
-		left: auto;
-		right: auto;
-		margin-bottom: 0;
-	}
+  .column { position: relative; float: none; display: block; }
+  aside { width: auto; }
+  section { width: auto; margin-left: 0; }
+  .projectDetails { width: 100%; }
+  .projectMeta { width: 100%; }
+  .contact-footer{
+    position: relative;
+    left: auto;
+    right: auto;
+    margin-bottom: 0;
+  }
 }
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 460px) {
-	.columns ul { width: 100%; float: none; }
+  .columns ul { width: 100%; float: none; }
 }
