style(logo): use negative left margin on logo

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -95,7 +95,7 @@ aside {
 		 width: 80%; 
 		 max-width: 480px;
 		#logo { 
-			margin-left: -18px ; 
+			margin-left: -7%; 
 			margin-top: 1em; 
 			img{ 
 				width: 60%;
