--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -123,7 +123,7 @@ aside {
     width: 80%;
     max-width: 480px; }
     aside .padded #logo {
-      margin-left: -18px;
+      margin-left: -7%;
       margin-top: 1em; }
       aside .padded #logo img {
         width: 60%; }
