--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -85,7 +85,7 @@ aside {
 	left: 0;
 	background-color: rgba(221,30,62,1); 
 	color: #FFF; 
-	overflow-y: scroll;
+	overflow-y: auto;
 	@media only screen and (min-width: 768px) {
 		width: 40%;
 		position: fixed;
@@ -129,7 +129,7 @@ aside {
 			margin-bottom: 40px;
 			max-width: 480px;
 			@media only screen and (min-width: 768px) {
-				@media only screen and (max-height: 670px){
+				@media only screen and (max-height: 640px){
 					position: relative;
 					left: auto;
 					right: auto;
