--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -104,6 +104,12 @@ aside {
         width: 60%;
       }
     }
+    #portfolioLinks{
+      a{
+        color: #FFF;
+        text-decoration: underline;
+      }
+    }
     .intro { 
       font-style: italic;
     }
@@ -254,4 +260,50 @@ section {
       }
     }
   }
+}
+.imgs{
+  width: 200px;
+  margin-bottom: 10%;
+  @media only screen and (min-width: 960px) {
+    float: right; 
+  }
+}
+.imgs img{
+  width: 100%;
+}
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,1); /* Black w/ opacity */
+}
+.modal div{
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 80%;
+  position: relative;
+  margin: 2% auto;
+  padding: 5px 15px;
+}
+.modal div img{
+  width: 100%;
+  @media only screen and (min-width: 768px) {
+    width: 20%; 
+  }
+}
+.close,.close1,.close2,.close3 {
+    color: white;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
 }
