--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -181,6 +181,9 @@ section {
     background-repeat: no-repeat; 
     background-size: 100% auto; 
     overflow: hidden;
+    #team{
+      text-align: center;
+    }
     &.cover-photo {
       height: 80vh;
       background-position: center center;
@@ -209,10 +212,40 @@ section {
       transform: translate(0, 80%);
       width: 120%;
       opacity: 0;
-      }
+    }
   }
   .padded { 
     margin: 0 10%; 
+  }
+  .card{
+    width: 100%;
+    float: left;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin-bottom: 5%;
+    min-height: 320px;
+    cursor: pointer;
+    @media only screen and (min-width: 768px) {
+      float: left;
+      width: 50%;    
+    }
+    @media only screen and (min-width: 960px) {
+      width: 25%;    
+    }
+    img{
+      margin: 2% auto;
+      display: block;
+    }
+    .container {
+      padding: 2px 16px;
+      h4, p{
+        margin: 0;
+        text-align: center;
+      }
+    }
+    &:hover {
+      box-shadow: 0 12px 24px 0 rgba(0,0,0,0.6);
+    }
   }
   .contentArea { 
     padding-bottom: 30px; 
@@ -261,28 +294,19 @@ section {
     }
   }
 }
-.imgs{
-  width: 200px;
-  margin-bottom: 10%;
-  @media only screen and (min-width: 960px) {
-    float: right; 
-  }
-}
-.imgs img{
-  width: 100%;
-}
+
 
 .modal {
-    display: none; 
-    position: fixed;
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,1); /* Black w/ opacity */
+  display: none; 
+  position: fixed;
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,1); /* Black w/ opacity */
 }
 .modal div{
   top: 0;
