--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -267,7 +267,7 @@ section {
         list-style-type: none;
         list-style-position: inside;
         li { 
-          padding-left: 0; 
+          padding-left: 1.2em; 
           &:before {
             content: '\203A';
             color: #DD1E3E;
